# casa-distro

./: .buildinfo  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  bbi_daily.html  bv_command.html  bv_command_help.html  casa_distro_admin_command.html  casa_distro_admin_command_help.html  casa_distro_command.html  casa_distro_command_help.html  concepts.html  developer.html  index.html  info.py  install_setup.html  nightly.html  objects.inv  search.html  searchindex.js  setup.py  technical.html  tox.ini
.doctrees/: bbi_daily.doctree  bv_command.doctree  bv_command_help.doctree  casa_distro_admin_command.doctree  casa_distro_admin_command_help.doctree  casa_distro_command.doctree  casa_distro_command_help.doctree  concepts.doctree  developer.doctree  environment.pickle  index.doctree  install_setup.doctree  nightly.doctree  technical.doctree
.github/workflows/: main.yml
_sources/: bv_command.rst.txt  bv_command_help.rst.txt  casa_distro_admin_command.rst.txt  casa_distro_admin_command_help.rst.txt  casa_distro_command.rst.txt  casa_distro_command_help.rst.txt  concepts.rst.txt  developer.rst.txt  index.rst.txt  install_setup.rst.txt  nightly.rst.txt  technical.rst.txt
_static/: custom.css
cbin/: casa_container
conda/: apptainer.def  setup_conda  setup_dev  setup_dev_apt  setup_dev_conda  setup_run_apt  setup_run_compiled  setup_run_conda
conda/recipe/: install_brainvisa-base.sh  install_brainvisa-cortical-surface.sh  install_brainvisa-data-processing.sh  install_morphologist.sh
custom_project/: CMakeLists.txt
custom_project/python/custom_project/: info.py
custom_project/src/: CMakeLists.txt  custom_project.cc  custom_project.h  custom_project.sip  test_custom_project.cc
doc/source/: bbi_daily.rst  bv_command.rst  casa_distro_admin_command.rst  casa_distro_command.rst  concepts.rst  conf.py  developer.rst  index.rst  install_setup.rst  nightly.rst  quickstart.rst  technical.rst
docker/: create_images
docker/imagen/: Dockerfile  (+2 more)
docker_registry/: config-template.yaml  create.sh
tests/: conftest.py  test_casa_distro_admin_command.py  test_casa_distro_command.py  test_execution.py
(+350 files in other folders)
